# freqlab-licensing

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/iplug2/: CMakeLists.txt  config.h
examples/iplug2/resources/: Iplugtest-AU-Info.plist  Iplugtest-CLAP-Info.plist  Iplugtest-VST3-Info.plist  Iplugtest-macOS-AUv3-Info.plist  Iplugtest-macOS-AUv3Framework-Info.plist  Iplugtest-macOS-Info.plist  Iplugtest-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
examples/iplug2/src/: LicenseUI.h  PluginProcessor.cpp  PluginProcessor.h  freqlab_response.h
examples/juce/: CMakeLists.txt
examples/juce/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  freqlab_response.h
examples/nih-plug/: Cargo.toml
examples/nih-plug/src/: freqlab_response.rs  lib.rs  ui.html
include/: freqlab_licensing.h
src/: lib.rs  stub.cpp
