[package]
name = "freqlab-licensing"
version = "0.1.0"
edition = "2021"
authors = ["freqlab <support@freqlab.app>"]
license = "MIT OR Apache-2.0"
description = "Local development surface for freqlab plugin licensing. The freqlab cloud build pipeline injects the real implementation when a plugin is built with licensing enabled."
repository = "https://github.com/Nanoshrine-Interactive/freqlab-licensing"
homepage = "https://freqlab.app"
documentation = "https://docs.rs/freqlab-licensing"
keywords = ["audio", "plugin", "vst", "licensing", "freqlab"]
categories = ["multimedia::audio", "development-tools"]
readme = "README.md"

# Reference plugins under `examples/` are self-contained crates with
# their own framework deps (nih-plug, etc.). They're not part of this
# crate's build graph; excluding them keeps `cargo publish` and
# `cargo package` tarballs lean.
exclude = ["examples/", "build/", "build-devtest/", "target/"]

[lib]
name = "freqlab_licensing"
path = "src/lib.rs"

[features]
default = []

# Local UI dev-mode flags. Pick one to bake a fake status into the stub
# so the seller's licensing UI can render that state in local builds
# without a cloud round-trip. Default (no feature) is Status::NoConfig
# (UI hidden).
#
# If multiple are enabled, precedence is:
#   dev-licensed > dev-expired > dev-tampered > dev-grace > dev-trial >
#   dev-not-activated (alias: dev-mode)
dev-mode = []                # alias for dev-not-activated (common case)
dev-not-activated = []       # Status::NotActivated (fresh install)
dev-licensed = []            # Status::Licensed (activated + valid)
dev-expired = []             # Status::Expired (past expiry)
dev-tampered = []            # Status::Tampered (sig verify failed)
dev-grace = []               # Status::GracePeriod (expiring soon)
dev-trial = []               # Status::Trial
